--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<ul class="flat-infomation">
-							<li class="phone">Call us: <a href="+61383766284" title="phone">+61 3 8376 6284</a></li>
+							<li class="phone">Call us: <a href="+91-9943122390" title="phone">+91-9932122321</a></li>
 							<li class="email">Email: <a href="mailto:support24-7@gmail.com" title="email">support24-7@gmail.com</a></li>
 						</ul><!-- /flat-infomation -->
 						<div class="flat-questions">
@@ -292,7 +292,7 @@
                                 data-paddingbottom="[0,0,0,0"
                                 data-paddingleft="[0,0,0,0]"
 
-                                style="z-index: 16; white-space: nowrap;text-transform:left;">FINANCE WORDPRESS THEME
+                                style="z-index: 16; white-space: nowrap;text-transform:left;">Eagna Business Solutions Pvt Ltd
                             </div>
 
                             <!-- LAYER NR. 13 -->
